[package]
name = "poem-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
poem-mcpserver = { version = "0.1.8", features = ["sse"] }
serde = { version = "1.0.219", features = ["derive"] }
schemars = "0.8.22"
poem = { version = "3.1.3", features = ["sse"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "sync"] }
